Fix Audio Service "device change UMAs" w.r.t. muting.

Filters mute toggling from being counted in the "device change UMAs," to
provide an apples-to-apples comparison with the counts in in the legacy
media::AudioOutputController code paths. It filters on the "reason" for
stream re-creation to ensure measurements are taken iff they would be
taken in the legacy code paths.

Side note: This is not exactly what we *should* be measuring (i.e., it
is filtering out too much in some cases, and double-counting others).
However, it should be sufficient to prove that stream creation counts/
timing in the new Audio Service is on-par with the legacy code paths.
This is discussed further in fix-it bug 8964843.

Bug: 896431, 896484, 866455
Change-Id: I677aaf5b485ffa8e605668a87b9bdc06cd3c1ae3
Reviewed-on: https://chromium-review.googlesource.com/c/1287256
Reviewed-by: Max Morin <maxmorin@chromium.org>
Commit-Queue: Yuri Wiitala <miu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#600790}
Former-commit-id: c3c83fe9271240d3b6501b80ed90b6c4067e46ea