services/audio/output_controller_unittest.cc
@@ -345,7 +345,7 @@ class OutputControllerTest : public ::testing::Test {
   }
 
   void Create() {
-    controller_->Create(false);
+    controller_->CreateStream();
     controller_->SetVolume(kTestVolume);
   }
 
